added test to check fetcher